--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "16.20.2"
   },
   "scripts": {
-    "start": "vite preview",
+    "start": "node server.js",
     "dev": "vite --force",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.15",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
